--- a/core/templates/core/project_list.html
+++ b/core/templates/core/project_list.html
@@ -12,7 +12,7 @@
                 <th>Project</th>
                 <th>Libraries</th>
                 <th>Number of Libraries</th>
-                <th></th>
+                <th class="no-sort-col"></th>
             </thead>
             <tbody>
             {% for project in projects%}
