--- a/core/templates/core/sample_list.html
+++ b/core/templates/core/sample_list.html
@@ -19,8 +19,8 @@
                     <th>Xenograft ID</th>
                     <th>Cell Line ID</th>
                     <th>Anonymous Patient ID</th>
-                    <th>Notes</th>
-                    <th></th>
+                    <th class="no-sort-col">Notes</th>
+                    <th class="no-sort-col"></th>
                 </tr>
             </thead>
             <tbody>
