--- a/core/templates/core/inventory.html
+++ b/core/templates/core/inventory.html
@@ -52,7 +52,13 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#datatable").DataTable({
-                "pageLength": 100
+                "pageLength": 100,
+                "columnDefs": [
+                    {
+                        "orderable": false,
+                        "targets": "no-sort-col",
+                    }
+                ]
             });
         });
     </script>
