--- a/sisyphus/templates/sisyphus/analysisinformation_list.html
+++ b/sisyphus/templates/sisyphus/analysisinformation_list.html
@@ -50,6 +50,10 @@
                     {
                         "type": "natural",
                         "targets": "jiraticket",
+                    },
+                    {
+                        "orderable": false,
+                        "targets": "no-sort-col",
                     }
                 ]
             });
