COLO-42: add some friendly padding to index page

--- a/core/static/core/style.css
+++ b/core/static/core/style.css
@@ -183,3 +183,9 @@ a.back-to-top {
     -moz-border-radius: 30px;
     border-radius: 30px;
 }
+
+.index-container {
+    border: solid 1px #E0E0E0;
+    border-radius: 3px;
+    padding-bottom: 1em;
+}
