--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,7 +7,7 @@
 {% block body %}
 <br/>
 
-<div class="container" style="border: solid 1px #E0E0E0; border-radius: 3px;">
+<div class="container index-container">
     <a style="text-decoration: none;" href="#core_collapse" data-toggle="collapse"><h4>Core</h4></a>
     <div id="core_collapse" class="collapse in">
         <table class="table-striped" style="width: 100%;">
@@ -33,7 +33,7 @@
 
 <br />
 
-<div class="container" style="border: solid 1px #E0E0E0; border-radius: 3px;">
+<div class="container index-container">
     <a style="text-decoration: none;" href="#db_collapse" data-toggle="collapse"><h4>DLP</h4></a>
     <div id="db_collapse" class="collapse in">
         <table class="table-striped" style="width: 100%;">
@@ -73,7 +73,7 @@
 
 <br/>
 
-<div class="container" style="border: solid 1px #E0E0E0; border-radius: 3px;">
+<div class="container index-container">
     <a style="text-decoration: none;" href="#pbal_collapse" data-toggle="collapse"><h4>PBAL</h4></a>
     <div id="pbal_collapse" class="collapse in">
         <table class="table-striped" style="width: 100%;">
@@ -101,7 +101,7 @@
 
 <br/>
 
-<div class="container" style="border: solid 1px #E0E0E0; border-radius: 3px;">
+<div class="container index-container">
     <a style="text-decoration: none;" href="#10x_collapse" data-toggle="collapse"><h4>10x Genomics</h4></a>
     <div id="10x_collapse" class="collapse in">
         <table class="table-striped" style="width: 100%;">
