--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -122,5 +122,8 @@
         </script>
     {% endblock %}
 
+    {# Any extra JS can go here #}
+    {% block scripts %}{% endblock %}
+
     </body>
 </html>
