--- a/core/templates/core/library_create.html
+++ b/core/templates/core/library_create.html
@@ -79,6 +79,34 @@
             </table>
          </fieldset>
 
+         {% if library_type == 'tenx' %}
+             <fieldset>
+                <legend>Conditions</legend>
+
+                {{ tenx_condition_formset.management_form }}
+
+                <div id="form_set">
+                    {% for condition_form in tenx_condition_formset %}
+                        <table class="table-condensed">
+                            <thead>
+                                {{ condition_form }}
+                            </thead>
+                        </table>
+                    {% endfor %}
+                </div>
+
+                <input type="button" class="btn btn-primary btn-sm" style="margin-top: 1.3em" value="Add condition" id="add_more">
+
+                <div id="empty_form" style="display:none">
+                    <table class='no_error'>
+                        {{ tenx_condition_formset.empty_form.as_table }}
+                    </table>
+                </div>
+             </fieldset>
+
+             <br>
+         {% endif %}
+
          <br>
 
          <fieldset>
@@ -109,4 +137,19 @@
 
     <br>
 </div>
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        $('#add_more').click(function() {
+            var form_idx = $('#id_form-TOTAL_FORMS').val();
+
+            if (form_idx != 0) {
+                $('#form_set').append('<hr>');
+            }
+
+            $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+            $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+        });
+    </script>
 {% endblock %}
