--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -21,10 +21,15 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="{% url 'core:inventory' %}">Inventory</a></td><td></td>
+                    <td><a href="{% url 'core:project_list' %}">Projects</a></td>
+                    <td>
+                        <p style="float: right;">
+                            <a href="{% url 'core:project_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color: green;"></i> Add</a>
+                        </p>
+                    </td>
                 </tr>
                 <tr>
-                    <td><a href="{% url 'core:project_list' %}">Projects</a></td><td></td>
+                    <td><a href="{% url 'core:inventory' %}">Inventory</a></td><td></td>
                 </tr>
             </tbody>
         </table>
