Fix a typo on the summary page

--- a/core/templates/core/summary.html
+++ b/core/templates/core/summary.html
@@ -28,7 +28,7 @@
 
         <ul>
             <li>it does not account for wells chosen not to be sequenced</li>
-            <li>it does not account for whether each well actually contained a single, live, cell</li>
+            <li>it does not account for whether each well actually contained a single, live cell</li>
         </ul>
     </div>
 
