save state added

--- a/core/templates/core/inventory.html
+++ b/core/templates/core/inventory.html
@@ -52,6 +52,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#datatable").DataTable({
+                stateSave: true,
                 "pageLength": 100,
                 "columnDefs": [
                     {
