--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -484,6 +484,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#experimental-condition-datatable").DataTable({
+                stateSave: true,
                 "columnDefs": [
                     {
                         "orderable": false,
