--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -151,6 +151,7 @@
         };
         $(document).ready(function() {
             $("#lib_datatable").DataTable({
+                stateSave: true,
                 "columnDefs": [
                     {
                         "type": "sequenced",
