--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -120,7 +120,8 @@
     {% block datatables_script %}
         <script type="text/javascript">
             $(document).ready(function() {
-                $("#datatable").DataTable({
+                $( "table[id*='datatable']" ).DataTable({
+                    stateSave: true,
                     "columnDefs": [
                         {
                             "orderable": false,
